--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vuepic/vue-datepicker": "^4.2.2",
     "bootstrap": "^5.3.0-alpha1",
     "dayjs": "^1.11.7",
     "node-sass": "^8.0.0",
